# zxart-pallete

./: LICENSE  palletes.toml  pyproject.toml
zxart_pallete/: main.py  streamlit.py  zxart.py
